--- a/SwipeCardView.xib
+++ b/SwipeCardView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -8,17 +8,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="SwipeCardView" id="iN0-l3-epB" customClass="Draggable">
+        <view contentMode="scaleToFill" restorationIdentifier="SwipeCardView" id="iN0-l3-epB" customClass="MDCSwipeToChooseView">
             <rect key="frame" x="0.0" y="0.0" width="480" height="668"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rcA-Ki-gWb">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BeetTorrent" translatesAutoresizingMaskIntoConstraints="NO" id="rcA-Ki-gWb">
                     <rect key="frame" x="10" y="10" width="460" height="460"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="rcA-Ki-gWb" secondAttribute="height" multiplier="1:1" id="x3F-Mu-5Ng"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qUr-j8-VFk">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name of thing" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qUr-j8-VFk">
                     <rect key="frame" x="10" y="478" width="460" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="xOD-if-8iN"/>
@@ -27,15 +27,91 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="distance" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ufm-cg-fNu">
+                    <rect key="frame" x="0.0" y="508" width="70" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="4rR-01-yzg"/>
+                        <constraint firstAttribute="width" constant="70" id="Zmx-ac-VzL"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rating" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CXw-fD-QuK">
+                    <rect key="frame" x="380" y="508" width="100" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="agh-13-znb"/>
+                        <constraint firstAttribute="height" constant="21" id="vYw-Sb-RPX"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bnY-oW-WZX">
+                    <rect key="frame" x="80" y="508" width="290" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="P4g-8C-PXK"/>
+                        <constraint firstAttribute="width" constant="120" id="v9d-ar-QW8"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="v9d-ar-QW8"/>
+                        </mask>
+                    </variation>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hours" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TV6-j1-Whe">
+                    <rect key="frame" x="0.0" y="550" width="480" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="NEP-5l-sAb"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="categories" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g84-OQ-UUY">
+                    <rect key="frame" x="0.0" y="529" width="480" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="cvY-0x-YM0"/>
+                        <constraint firstAttribute="height" constant="21" id="pG2-AD-VlZ"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="pG2-AD-VlZ"/>
+                        </mask>
+                    </variation>
+                </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="g84-OQ-UUY" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="0Xk-Kd-91B"/>
                 <constraint firstItem="rcA-Ki-gWb" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="2P5-WI-GzL"/>
+                <constraint firstItem="TV6-j1-Whe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="4AQ-VB-FX1"/>
                 <constraint firstAttribute="bottom" secondItem="qUr-j8-VFk" secondAttribute="bottom" constant="10" id="5uX-il-Wpz"/>
+                <constraint firstItem="CXw-fD-QuK" firstAttribute="leading" secondItem="Ufm-cg-fNu" secondAttribute="trailing" id="8Ob-so-URF"/>
+                <constraint firstAttribute="trailing" secondItem="g84-OQ-UUY" secondAttribute="trailing" id="CRf-wZ-Uck"/>
+                <constraint firstItem="CXw-fD-QuK" firstAttribute="top" secondItem="qUr-j8-VFk" secondAttribute="bottom" id="DXK-XP-MLE"/>
+                <constraint firstItem="CXw-fD-QuK" firstAttribute="leading" secondItem="bnY-oW-WZX" secondAttribute="trailing" constant="10" id="Hit-AF-cHL"/>
+                <constraint firstItem="bnY-oW-WZX" firstAttribute="leading" secondItem="Ufm-cg-fNu" secondAttribute="trailing" constant="10" id="KfE-xq-S85"/>
+                <constraint firstItem="g84-OQ-UUY" firstAttribute="top" secondItem="CXw-fD-QuK" secondAttribute="bottom" id="UkJ-L9-Xgd"/>
                 <constraint firstItem="rcA-Ki-gWb" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="VfT-NP-BsL"/>
+                <constraint firstAttribute="trailing" secondItem="CXw-fD-QuK" secondAttribute="trailing" id="WgI-gb-17v"/>
+                <constraint firstAttribute="trailing" secondItem="TV6-j1-Whe" secondAttribute="trailing" id="Y0E-GL-bHd"/>
+                <constraint firstItem="bnY-oW-WZX" firstAttribute="top" secondItem="qUr-j8-VFk" secondAttribute="bottom" id="Y1A-yx-llX"/>
+                <constraint firstItem="Ufm-cg-fNu" firstAttribute="top" secondItem="qUr-j8-VFk" secondAttribute="bottom" id="Z4u-qu-iGg"/>
+                <constraint firstItem="g84-OQ-UUY" firstAttribute="leading" secondItem="CXw-fD-QuK" secondAttribute="trailing" id="dIc-Um-FYv"/>
+                <constraint firstItem="g84-OQ-UUY" firstAttribute="top" secondItem="qUr-j8-VFk" secondAttribute="bottom" id="doT-So-DKt"/>
+                <constraint firstItem="Ufm-cg-fNu" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="hfz-6C-u70"/>
                 <constraint firstItem="qUr-j8-VFk" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="iHc-D4-V50"/>
+                <constraint firstAttribute="trailing" secondItem="g84-OQ-UUY" secondAttribute="trailing" id="jH4-eH-Ldz"/>
                 <constraint firstItem="qUr-j8-VFk" firstAttribute="top" secondItem="rcA-Ki-gWb" secondAttribute="bottom" constant="8" id="mp6-fb-koH"/>
                 <constraint firstAttribute="trailing" secondItem="qUr-j8-VFk" secondAttribute="trailing" constant="10" id="ohp-xy-Dg6"/>
+                <constraint firstItem="TV6-j1-Whe" firstAttribute="top" secondItem="g84-OQ-UUY" secondAttribute="bottom" id="tr6-gB-Nsp"/>
                 <constraint firstAttribute="centerX" secondItem="qUr-j8-VFk" secondAttribute="centerX" id="v0S-p5-1i3"/>
                 <constraint firstAttribute="trailing" secondItem="rcA-Ki-gWb" secondAttribute="trailing" constant="10" id="zO2-18-F8O"/>
             </constraints>
@@ -44,13 +120,25 @@
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="5uX-il-Wpz"/>
+                    <exclude reference="dIc-Um-FYv"/>
+                    <exclude reference="doT-So-DKt"/>
+                    <exclude reference="jH4-eH-Ldz"/>
+                    <exclude reference="8Ob-so-URF"/>
                 </mask>
             </variation>
             <connections>
-                <outlet property="imageView" destination="rcA-Ki-gWb" id="dUV-bY-gcU"/>
+                <outlet property="Price" destination="bnY-oW-WZX" id="tb2-i3-JAm"/>
+                <outlet property="categories" destination="g84-OQ-UUY" id="KIo-Rg-RAf"/>
+                <outlet property="distance" destination="Ufm-cg-fNu" id="8Mv-mi-u67"/>
+                <outlet property="hours" destination="TV6-j1-Whe" id="vCl-KG-Lm4"/>
+                <outlet property="imageView" destination="rcA-Ki-gWb" id="Bca-Un-Gff"/>
                 <outlet property="information" destination="qUr-j8-VFk" id="P29-B8-wHg"/>
+                <outlet property="rating" destination="CXw-fD-QuK" id="H0Y-3h-Q4M"/>
             </connections>
             <point key="canvasLocation" x="304" y="380"/>
         </view>
     </objects>
+    <resources>
+        <image name="BeetTorrent" width="3000" height="3000"/>
+    </resources>
 </document>
